--- a/test.ipynb
+++ b/test.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cookies: [{'domain': '.ncu.edu.tw', 'expiry': 1710657015, 'httpOnly': False, 'name': '_gat_gtag_UA_153670547_1', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': '1'}, {'domain': 'w2.math.ncu.edu.tw', 'expiry': 1710664152, 'httpOnly': False, 'name': 'XSRF-TOKEN', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'eyJpdiI6IjVLVThrWTlzQVQ5WUg3NmVcL1RnY3hnPT0iLCJ2YWx1ZSI6InlWZHEyWUd4ZkY1RjE2SW9JVnNVT1BIOWtiaVNYNjdJOVVwXC84NnppM3dydkdnVWR3RkZXZlF5WW5tVGl3eGpjIiwibWFjIjoiYWE2MDQ5NTNjNWM3ZTU4OWQ5MDQ1ZmQxMjVkYjUzMDEzNWJkZmFjNTE2NmQ5MzA0NGZkZjM0MjA2MDBkNWNiMCJ9'}, {'domain': '.ncu.edu.tw', 'expiry': 1745216955, 'httpOnly': False, 'name': '_ga', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GA1.3.2107549644.1710656955'}, {'domain': 'w2.math.ncu.edu.tw', 'expiry': 1710664152, 'httpOnly': True, 'name': 'laravel_session', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'eyJpdiI6IkxVY3o0UGRUNnNlaTVkQ2dFTzF6SUE9PSIsInZhbHVlIjoidlpBclwvc1pubWdIZTV3MnVjUUtub2JwQU5ic2tXUXRBeTBnVGJVU2dwV0Z5WVNBZStORStyODJUVFhRTkxleG4iLCJtYWMiOiJjYjI4NjUzMjNjYjM1ZDc4NzI2ZTZmMTg2MzIxNzIxZTA3NGVlZDUyMTIwODQwYzEzYmNiYzNhNmMwNTBhY2EyIn0%3D'}, {'domain': '.ncu.edu.tw', 'expiry': 1710743355, 'httpOnly': False, 'name': '_gid', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GA1.3.532156776.1710656955'}, {'domain': '.ncu.edu.tw', 'expiry': 1745216955, 'httpOnly': False, 'name': '_ga_2ZT12X5B3X', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GS1.1.1710656955.1.0.1710656955.0.0.0'}]\n",
+      "Cookies: [{'domain': '.ncu.edu.tw', 'expiry': 1710658194, 'httpOnly': False, 'name': '_gat_gtag_UA_153670547_1', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': '1'}, {'domain': 'w2.math.ncu.edu.tw', 'expiry': 1710665329, 'httpOnly': False, 'name': 'XSRF-TOKEN', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'eyJpdiI6IjVlWlpqWmRhbHZXS2ZoWDNvaDl4QlE9PSIsInZhbHVlIjoiUjQ5bGxLdm84S3pBZFlrUW16ZGs4VXJUZWZZdHFkZnVjc1ZxTEVLcFwvMFFaenlxcTZKNjNtTjljalwvN0JrdWtVIiwibWFjIjoiNjFkMTNkYjI2N2Y0ZjRiZjg4MWE5ZTE1MGI4MWFjNTZiZmMyZWRhZjQ5YThjNzkxN2JmZTA0YzVlMDY0ZDZkYiJ9'}, {'domain': '.ncu.edu.tw', 'expiry': 1745218134, 'httpOnly': False, 'name': '_ga', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GA1.3.1952377605.1710658134'}, {'domain': 'w2.math.ncu.edu.tw', 'expiry': 1710665329, 'httpOnly': True, 'name': 'laravel_session', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'eyJpdiI6ImFyWEJVK1l5eHVqaVNWQzJSdm96UXc9PSIsInZhbHVlIjoiNVwvN0kyVGJzR0xqbHlNNWp4WXZ1TVBZOW1kTm5zbG43SnpXWGtIbGg5Q29HMEEzSVwvZTJSSlhuRGNuY1g0aDlEIiwibWFjIjoiNThhYzJmZDllODk0ZGIwYWY5OWU0YTUxMDhlNmNiODU5MzU4Mjc4MmM4NDE3MThlZGI2NDgyY2JlOTFiMjg3ZCJ9'}, {'domain': '.ncu.edu.tw', 'expiry': 1710744534, 'httpOnly': False, 'name': '_gid', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GA1.3.1350658619.1710658134'}, {'domain': '.ncu.edu.tw', 'expiry': 1745218133, 'httpOnly': False, 'name': '_ga_2ZT12X5B3X', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GS1.1.1710658133.1.0.1710658133.0.0.0'}]\n",
       "Headers: {'sec-ch-ua': '\"Chromium\";v=\"122\", \"Not(A:Brand\";v=\"24\", \"Google Chrome\";v=\"122\"', 'sec-ch-ua-mobile': '?0', 'sec-ch-ua-platform': '\"macOS\"', 'upgrade-insecure-requests': '1', 'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36', 'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7', 'sec-fetch-site': 'none', 'sec-fetch-mode': 'navigate', 'sec-fetch-user': '?1', 'sec-fetch-dest': 'document', 'accept-encoding': 'gzip, deflate, br', 'accept-language': 'zh-TW,zh;q=0.9'}\n"
      ]
     }
@@ -51,6 +51,11 @@
     "driver.get(url)\n",
     "sleep(2)\n",
     "\n",
+    "# : driver get the title, content, links\n",
+    "driver_title = driver.title\n",
+    "driver_content = driver.find_element(By.TAG_NAME, \"body\").text\n",
+    "driver_all_links_elements = driver.find_elements(By.XPATH, \"//a[@href]\")\n",
+    "\n",
     "# : Get the Cookies & Headers\n",
     "current_login_cookie = driver.get_cookies()\n",
     "current_login_requests = driver.requests\n",
@@ -69,38 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'sec-ch-ua': '\"Chromium\";v=\"122\", \"Not(A:Brand\";v=\"24\", \"Google Chrome\";v=\"122\"',\n",
-       " 'sec-ch-ua-mobile': '?0',\n",
-       " 'sec-ch-ua-platform': '\"macOS\"',\n",
-       " 'upgrade-insecure-requests': '1',\n",
-       " 'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36',\n",
-       " 'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
-       " 'sec-fetch-site': 'none',\n",
-       " 'sec-fetch-mode': 'navigate',\n",
-       " 'sec-fetch-user': '?1',\n",
-       " 'sec-fetch-dest': 'document',\n",
-       " 'accept-encoding': 'gzip, deflate, br',\n",
-       " 'accept-language': 'zh-TW,zh;q=0.9'}"
+       "'國立中央大學數學系\\n公告\\n學術活動\\n系所資訊\\n系所成員\\n課程介紹\\n入學資訊\\n活動紀錄\\n立即捐款\\n系PORTAL\\n成績查詢\\nLANGUAGE\\n國立中央大學數學系\\n數學科學組 計算與資料科學組\\n置頂公告\\n1122數學系研究生學位考試申請須知\\n2024/02/21\\n查看更多\\n最新消息\\n1122數學系研究生學位考試申請須知\\n2024/02/21\\n校慶系列講座第一場(2/27)：探索數學中的對稱之美\\n2024/02/15\\n校慶系列講座第三場(5/7)：「數學的魅力：從自然到科技」\\n2024/02/15\\n系友演講〖AI時代的求職力〗\\n2023/11/15\\n113學年度數學系碩士班甄試得參加複試名單及口試通知\\n2023/10/27\\n113學年度數學系特殊選才得參加複試名單\\n2023/10/27\\n113碩士班甄試9/27開始報名\\n2023/09/26\\n查看更多\\n學術活動\\nGaudin Hamiltonians on unitarizable modules over classical Lie (super)algebras\\n2024/03/07\\nGeometry and Topology in Mathematical AI\\n2024/02/29\\nTits alternative and its application\\n2024/02/22\\nEvolution of Diffusion Models: From Birth to Enhanced Efficiency and Controllability\\n2024/02/22\\nEarly Detection and Classification of Liver Fibrosis with Machine Learning Methods: Image-Based Biomarkers and Data-driven Computational Techniques in Dynamic Contrast-Enhanced MRI\\n2024/01/09\\nVariational Principles in Fluid Mechanics\\n2023/12/21\\nOn the newform theory for p-adic classical groups\\n2023/12/14\\nCONSERVATIVE PHYSICS-INFORMED NEURAL NETWORKS FOR GENERALIZED BUCKLEY-LEVERETT EQUATION NEAR CRITICAL STATES\\n2023/12/12\\n查看更多\\n相關連結\\n公告\\n重要公告\\n最新消息\\n歷史消息\\n獎學金\\n學術活動\\n演講資訊\\n研討會公告\\n歷史紀錄\\n系所資訊\\n系所簡介\\n數學計算實驗室\\n機器人實驗室\\n圖書室\\n研究計畫\\n歷屆系主任\\n大事紀要\\n聯絡資訊\\n系友會\\n系所成員\\n專任教師\\n兼任教師\\n博士後研究員\\n訪問學者\\n行政人員\\n退休教師\\n課程介紹\\n修課規定\\n課程簡介\\n課程地圖\\n開放式課程\\n核心能力表\\n入學資訊\\n數學科學組\\n計算與資料科學組\\n學士班入學\\n碩士班入學\\n博士班入學\\n活動紀錄\\n演講紀錄\\n親師交流\\n學生活動\\n研討會紀錄\\n其他\\n(32001)桃園市中壢區中大路300號 03-4227151 轉 65117 或 65100\\n國立中央大學 國立中央大學數學系 聯絡我們 網路使用規範 隱私權政策'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "for request in current_login_requests:\n",
-    "    if request.url == url:\n",
-    "        headers = {k: v for k, v in request.headers.items()}\n",
-    "        \n",
-    "headers"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -371,13 +359,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Text: 國立中央大學數學系, Href: https://w2.math.ncu.edu.tw/\n",
+      "Text: 公告, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/annou/top\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/annou/news\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/annou/history\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/annou/scholarship\n",
+      "Text: 學術活動, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/academic/speeches\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/academic/seminars\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/academic/history\n",
+      "Text: 系所資訊, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/info\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/mcl\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/aimakerlab\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/library\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/plan\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/chairman\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/event\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/about/contact\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/alumni/index_news\n",
+      "Text: 系所成員, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/full\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/adjunct\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/postdoc\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/visitor\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/staff\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/member/retire\n",
+      "Text: 課程介紹, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/course/rule\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/course/intro\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/course/map\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/course/open\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/course/major\n",
+      "Text: 入學資訊, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/hs_math\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/hs\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/info/college\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/info/master\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/info/phd\n",
+      "Text: 活動紀錄, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/record/speech\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/record/parents\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/record/student\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/record/seminar\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/record/other\n",
+      "Text: 立即捐款, Href: https://w2.math.ncu.edu.tw/docs/%E7%AB%8B%E5%8D%B3%E6%8D%90%E6%AC%BE.pdf\n",
+      "Text: 系PORTAL, Href: https://portal.math.ncu.edu.tw/\n",
+      "Text: 成績查詢, Href: http://grade.math.ncu.edu.tw/\n",
+      "Text: LANGUAGE, Href: https://w2.math.ncu.edu.tw//member/full#\n",
+      "Text: , Href: https://en.math.ncu.edu.tw/\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/indonesian\n",
+      "Text: , Href: https://w2.math.ncu.edu.tw/Vietnamese\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/49\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/46\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/12\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/26\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/27\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/31\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/45\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/30\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/35\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/36\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/60\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/42\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/32\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/21\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/62\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/78\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/24\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/28\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/47\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/65\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/64\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/63\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/77\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/59\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/81\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/82\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/83\n",
+      "Text: 詳細資訊, Href: https://w2.math.ncu.edu.tw/member/full/84\n",
+      "Text: 頁首, Href: https://w2.math.ncu.edu.tw//member/full#top\n",
+      "Text: 黃榮宗, Href: https://w2.math.ncu.edu.tw//member/full#0\n",
+      "Text: 鄭經斅, Href: https://w2.math.ncu.edu.tw//member/full#1\n",
+      "Text: 林欽誠, Href: https://w2.math.ncu.edu.tw//member/full#2\n",
+      "Text: 許正雄, Href: https://w2.math.ncu.edu.tw//member/full#3\n",
+      "Text: 楊肅煜, Href: https://w2.math.ncu.edu.tw//member/full#4\n",
+      "Text: 葉鴻國, Href: https://w2.math.ncu.edu.tw//member/full#5\n",
+      "Text: 饒維明, Href: https://w2.math.ncu.edu.tw//member/full#6\n",
+      "Text: 高華隆, Href: https://w2.math.ncu.edu.tw//member/full#7\n",
+      "Text: 洪盟凱, Href: https://w2.math.ncu.edu.tw//member/full#8\n",
+      "Text: 姚美琳, Href: https://w2.math.ncu.edu.tw//member/full#9\n",
+      "Text: 方向, Href: https://w2.math.ncu.edu.tw//member/full#10\n",
+      "Text: 李明憶, Href: https://w2.math.ncu.edu.tw//member/full#11\n",
+      "Text: 黃楓南, Href: https://w2.math.ncu.edu.tw//member/full#12\n",
+      "Text: 單維彰, Href: https://w2.math.ncu.edu.tw//member/full#13\n",
+      "Text: 黃皜文, Href: https://w2.math.ncu.edu.tw//member/full#14\n",
+      "Text: 胡偉帆, Href: https://w2.math.ncu.edu.tw//member/full#15\n",
+      "Text: 饒瑞彬, Href: https://w2.math.ncu.edu.tw//member/full#16\n",
+      "Text: 廖勝強, Href: https://w2.math.ncu.edu.tw//member/full#17\n",
+      "Text: 須上苑, Href: https://w2.math.ncu.edu.tw//member/full#18\n",
+      "Text: 俞韋亘, Href: https://w2.math.ncu.edu.tw//member/full#19\n",
+      "Text: 黃世豪 (HUANG, SHIH-HAO), Href: https://w2.math.ncu.edu.tw//member/full#20\n",
+      "Text: 曾國師, Href: https://w2.math.ncu.edu.tw//member/full#21\n",
+      "Text: 陳志瑋, Href: https://w2.math.ncu.edu.tw//member/full#22\n",
+      "Text: 陳正傑, Href: https://w2.math.ncu.edu.tw//member/full#23\n",
+      "Text: 鄒駿祥, Href: https://w2.math.ncu.edu.tw//member/full#24\n",
+      "Text: 蔡昇甫, Href: https://w2.math.ncu.edu.tw//member/full#25\n",
+      "Text: 陳亭甫, Href: https://w2.math.ncu.edu.tw//member/full#26\n",
+      "Text: 蔡宛育, Href: https://w2.math.ncu.edu.tw//member/full#27\n",
+      "Text: 頁尾, Href: https://w2.math.ncu.edu.tw//member/full#footer\n",
+      "Text: 重要公告, Href: https://w2.math.ncu.edu.tw/annou/top/\n",
+      "Text: 最新消息, Href: https://w2.math.ncu.edu.tw/annou/news/\n",
+      "Text: 歷史消息, Href: https://w2.math.ncu.edu.tw/annou/history/\n",
+      "Text: 獎學金, Href: https://w2.math.ncu.edu.tw/annou/scholarship/\n",
+      "Text: 演講資訊, Href: https://w2.math.ncu.edu.tw/academic/speeches/\n",
+      "Text: 研討會公告, Href: https://w2.math.ncu.edu.tw/academic/seminars/\n",
+      "Text: 歷史紀錄, Href: https://w2.math.ncu.edu.tw/academic/history/\n",
+      "Text: 系所簡介, Href: https://w2.math.ncu.edu.tw/about/info/\n",
+      "Text: 數學計算實驗室, Href: https://w2.math.ncu.edu.tw/about/mcl/\n",
+      "Text: 機器人實驗室, Href: https://w2.math.ncu.edu.tw/about/aimakerlab/\n",
+      "Text: 圖書室, Href: https://w2.math.ncu.edu.tw/about/library/\n",
+      "Text: 研究計畫, Href: https://w2.math.ncu.edu.tw/about/plan/\n",
+      "Text: 歷屆系主任, Href: https://w2.math.ncu.edu.tw/about/chairman/\n",
+      "Text: 大事紀要, Href: https://w2.math.ncu.edu.tw/about/event/\n",
+      "Text: 聯絡資訊, Href: https://w2.math.ncu.edu.tw/about/contact/\n",
+      "Text: 系友會, Href: https://w2.math.ncu.edu.tw/alumni/index_news\n",
+      "Text: 專任教師, Href: https://w2.math.ncu.edu.tw/member/full/\n",
+      "Text: 兼任教師, Href: https://w2.math.ncu.edu.tw/member/adjunct/\n",
+      "Text: 博士後研究員, Href: https://w2.math.ncu.edu.tw/member/postdoc/\n",
+      "Text: 訪問學者, Href: https://w2.math.ncu.edu.tw/member/visitor/\n",
+      "Text: 行政人員, Href: https://w2.math.ncu.edu.tw/member/staff/\n",
+      "Text: 退休教師, Href: https://w2.math.ncu.edu.tw/member/retire/\n",
+      "Text: 修課規定, Href: https://w2.math.ncu.edu.tw/course/rule/\n",
+      "Text: 課程簡介, Href: https://w2.math.ncu.edu.tw/course/intro/\n",
+      "Text: 課程地圖, Href: https://w2.math.ncu.edu.tw/course/map/\n",
+      "Text: 開放式課程, Href: https://w2.math.ncu.edu.tw/course/open/\n",
+      "Text: 核心能力表, Href: https://w2.math.ncu.edu.tw/course/major/\n",
+      "Text: 數學科學組, Href: https://w2.math.ncu.edu.tw/hs_math\n",
+      "Text: 計算與資料科學組, Href: https://w2.math.ncu.edu.tw/hs\n",
+      "Text: 學士班入學, Href: https://w2.math.ncu.edu.tw/info/college\n",
+      "Text: 碩士班入學, Href: https://w2.math.ncu.edu.tw/info/master\n",
+      "Text: 博士班入學, Href: https://w2.math.ncu.edu.tw/info/phd\n",
+      "Text: 演講紀錄, Href: https://w2.math.ncu.edu.tw/record/speech/\n",
+      "Text: 親師交流, Href: https://w2.math.ncu.edu.tw/record/parents/\n",
+      "Text: 學生活動, Href: https://w2.math.ncu.edu.tw/record/student/\n",
+      "Text: 研討會紀錄, Href: https://w2.math.ncu.edu.tw/record/seminar/\n",
+      "Text: 其他, Href: https://w2.math.ncu.edu.tw/record/other/\n",
+      "Text: 國立中央大學, Href: https://www.ncu.edu.tw/\n",
+      "Text: 國立中央大學數學系, Href: https://www.facebook.com/MathNCU/\n",
+      "Text: 聯絡我們, Href: https://w2.math.ncu.edu.tw/about/contact\n",
+      "Text: 網路使用規範, Href: https://www.cc.ncu.edu.tw/page/rules_ncu\n",
+      "Text: 隱私權政策, Href: https://www.cc.ncu.edu.tw/page/privacy?fbclid=IwAR0ZeZkaowpqMwzAztUgeEsItMW9mHQJqJ-TJh6KIIiMsALEgHivQWpT_bE\n",
       "國立中央大學數學系\n",
       "國立中央大學數學系\n",
       "公告\n",
